--- a/src/index.html
+++ b/src/index.html
@@ -4,26 +4,33 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Homework 11</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/izitoast/dist/css/iziToast.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/simplelightbox/dist/simple-lightbox.min.css"
-    />
   </head>
   <body>
-    <form id="search-form">
-      <input type="text" name="searchQuery" placeholder="Search images..." />
-      <button type="submit">Search</button>
-    </form>
-    <div class="loader" style="display: none">Loading...</div>
-    <div class="gallery"></div>
+    <main>
+      <search>
+        <form>
+          <input
+            type="text"
+            name="search-text"
+            id="search-text"
+            placeholder="Search images..."
+          />
+          <button type="submit">Search</button>
+        </form>
+      </search>
+
+      <p class="loader-box hidden"><span class="loader"></span></p>
+      <ul class="gallery"></ul>
+    </main>
 
     <script type="module" src="./main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/simplelightbox/dist/simple-lightbox.min.js"></script>
   </body>
 </html>
