--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
   </head>
   <body>
     <main>
-      <search>
-        <form>
+      <section>
+        <form class="form">
           <input
             type="text"
             name="search-text"
@@ -25,7 +25,7 @@
           />
           <button type="submit">Search</button>
         </form>
-      </search>
+      </section>
 
       <p class="loader-box hidden"><span class="loader"></span></p>
       <ul class="gallery"></ul>
