--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,10 @@
   </head>
   <body>
     <main>
-      <section>
+      <div class="search-box">
         <form class="form">
           <input
+            class="form-input"
             type="text"
             name="search-text"
             id="search-text"
@@ -25,7 +26,7 @@
           />
           <button type="submit">Search</button>
         </form>
-      </section>
+      </div>
 
       <p class="loader-box hidden"><span class="loader"></span></p>
       <ul class="gallery"></ul>
